antiwey@gmail.com20190912: 1. 解决新增宠物，不添加图片导致的crash 2. 增加添加宠物页面，体重hint

--- a/project/app/src/main/res/layout/petbus_profile.xml
+++ b/project/app/src/main/res/layout/petbus_profile.xml
@@ -10,7 +10,7 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="53dp"
-        android:background="@color/colorWhrite"
+        android:background="@color/colorWhite"
         android:gravity="center"
         android:id="@+id/topbar_lineralayout"
         android:layout_marginBottom="4dp"
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="19dp"
-            android:background="@color/colorWhrite"
+            android:background="@color/colorWhite"
             android:clickable="false"
             android:layout_alignParentLeft ="true"
             android:layout_centerVertical="true"
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="19dp"
-            android:background="@color/colorWhrite"
+            android:background="@color/colorWhite"
             android:layout_centerVertical="true"
             android:clickable="false"
             android:layout_alignParentRight="true"
