--- a/project/app/src/main/res/layout/petbus_profileadd.xml
+++ b/project/app/src/main/res/layout/petbus_profileadd.xml
@@ -13,7 +13,7 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="53dp"
-        android:background="@color/colorWhrite"
+        android:background="@color/colorWhite"
          android:id="@+id/topbar_lineralayout">
 
         <ImageButton
@@ -22,8 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="19dp"
-            android:background="@color/colorWhrite"
-            android:clickable="false"
+            android:background="@color/colorWhite"
             android:src="@mipmap/arrarryleft_normal" />
         <TextView
             android:id="@+id/txt_profileaddTitle"
