--- a/project/app/src/main/res/layout/petbus_firstvisit.xml
+++ b/project/app/src/main/res/layout/petbus_firstvisit.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:text="@string/infofirstvisit"
-        android:background="@color/colorWhrite"
+        android:background="@color/colorWhite"
         android:textSize="21sp"
         android:gravity="center"/>
     <fragment
