TerryCheng20190717:调整了主界面的布局

--- a/project/app/src/main/res/layout/petbus_action.xml
+++ b/project/app/src/main/res/layout/petbus_action.xml
@@ -20,53 +20,52 @@
             android:id="@+id/title_text"
             style="@style/titlebar_text"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginBottom="12dp"
-            android:clickable="true"
-            android:gravity="center_horizontal|clip_vertical"
+            android:gravity="center"
             android:text="@string/petdiary" />
         <ImageButton
             android:id="@+id/leftreturn_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="14dp"
+            android:layout_height="16dp"
             android:layout_marginLeft="19dp"
-            android:layout_marginTop="23dp"
+            android:layout_marginTop="19dp"
             android:background="#00000000"
             android:clickable="false"
             android:layout_alignParentLeft ="true"
             android:src="@mipmap/arrarryleft_normal" />
         <ImageButton
             android:id="@+id/setting_button"
-            android:layout_width="16dp"
-            android:layout_height="14dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="3dp"
-            android:layout_marginTop="21dp"
+            android:layout_width="14dp"
+            android:layout_height="16dp"
+            android:layout_marginRight="19dp"
+            android:layout_marginTop="19dp"
             android:background="#00000000"
             android:clickable="false"
+            android:maxHeight="16dp"
+            android:maxWidth="14dp"
+            android:minHeight="16dp"
+            android:minWidth="14dp"
             android:layout_alignParentRight="true"
             android:src="@mipmap/setting_normal" />
 
         <ImageButton
             android:id="@+id/add_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="14dp"
+            android:layout_height="16dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="3dp"
+            android:layout_marginRight="18dp"
             android:background="#00000000"
             android:clickable="false"
             android:layout_alignParentRight="true"
             android:src="@mipmap/add_normal" />
         <ImageButton
             android:id="@+id/overview_button"
-            android:layout_width="16dp"
-            android:layout_height="14dp"
-            android:layout_marginLeft="5dp"
+            android:layout_width="14dp"
+            android:layout_height="16dp"
             android:layout_marginTop="21dp"
-            android:layout_marginRight="3dp"
+            android:layout_marginRight="19dp"
             android:background="#00000000"
             android:clickable="false"
             android:layout_toLeftOf="@+id/setting_button"
