--- a/project/app/src/main/res/layout/actionfragment_diary.xml
+++ b/project/app/src/main/res/layout/actionfragment_diary.xml
@@ -6,9 +6,9 @@
             android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_marginTop ="17dp"
         android:layout_height="56dp"
         android:background="@color/colorWhite"
+        android:layout_marginTop ="3dp"
         android:orientation="horizontal">
         <ImageView
             android:layout_width="wrap_content"
@@ -30,6 +30,7 @@
             android:gravity="center_vertical"
             android:text="@string/time"/>
         <LinearLayout
+            android:layout_marginRight ="24dp"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="right"
@@ -39,6 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 style="@style/diary_addfragment_text"
+                android:textColor="#C1C0C0"
                 android:gravity="center_vertical"
                 android:text="@string/time"/>
         </LinearLayout>
@@ -60,7 +62,7 @@
             android:minHeight="21dp"
             android:layout_marginLeft ="23dp"
             android:layout_marginTop ="17dp"
-            android:src="@mipmap/add_action" />
+            android:src="@mipmap/pet_pic" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
@@ -70,7 +72,7 @@
             android:text="@string/lovepet"/>
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="right"
             android:id="@+id/pet_select"
             android:orientation="horizontal">
@@ -84,68 +86,83 @@
                 android:orientation="horizontal">
                 <ImageView
                     android:gravity="center"
+                    android:layout_marginTop="11dp"
                     android:id="@+id/pet_photo_4"
                     android:background="#00000000"
                     android:clickable="false"
                     android:adjustViewBounds="true"
-                    android:maxHeight="80dp"
-                    android:maxWidth="80dp"
-                    android:minHeight="80dp"
-                    android:minWidth="80dp"
-                    android:layout_marginLeft ="130dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:maxHeight="33dp"
+                    android:maxWidth="33dp"
+                    android:minHeight="33dp"
+                    android:minWidth="33dp"
+                    android:layout_marginLeft ="100dp"
+                    android:layout_width="33dp"
+                    android:layout_height="33dp"
                     android:src="@mipmap/photo_normal" />
                 <ImageView
+                    android:layout_marginTop="11dp"
                     android:gravity="center"
                     android:id="@+id/pet_photo_3"
                     android:background="#00000000"
                     android:clickable="false"
                     android:adjustViewBounds="true"
-                    android:maxHeight="80dp"
-                    android:maxWidth="80dp"
-                    android:minHeight="80dp"
-                    android:minWidth="80dp"
+                    android:maxHeight="33dp"
+                    android:maxWidth="33dp"
+                    android:minHeight="33dp"
+                    android:minWidth="33dp"
                     android:layout_marginLeft ="90dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="33dp"
+                    android:layout_height="33dp"
                     android:src="@mipmap/photo_normal" />
                 <ImageView
+                    android:layout_marginTop="11dp"
                     android:gravity="center"
                     android:id="@+id/pet_photo_2"
                     android:background="#00000000"
                     android:clickable="false"
                     android:adjustViewBounds="true"
-                    android:maxHeight="80dp"
-                    android:maxWidth="80dp"
-                    android:minHeight="80dp"
-                    android:minWidth="80dp"
-                    android:layout_marginLeft ="50dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:maxHeight="33dp"
+                    android:maxWidth="33dp"
+                    android:minHeight="33dp"
+                    android:minWidth="33dp"
+                    android:layout_marginLeft ="80dp"
+                    android:layout_width="33dp"
+                    android:layout_height="33dp"
                     android:src="@mipmap/photo_normal" />
 
                 <ImageView
+                    android:layout_marginTop="11dp"
                     android:id="@+id/pet_photo_1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
+                    android:layout_width="33dp"
+                    android:layout_height="33dp"
                     android:adjustViewBounds="true"
                     android:background="#00000000"
                     android:clickable="false"
                     android:gravity="center"
-                    android:maxWidth="80dp"
-                    android:maxHeight="80dp"
-                    android:minWidth="80dp"
-                    android:minHeight="80dp"
+                    android:maxWidth="33dp"
+                    android:maxHeight="33dp"
+                    android:minWidth="33dp"
+                    android:minHeight="33dp"
+                    android:layout_marginLeft ="70dp"
                     android:src="@mipmap/photo_normal" />
             </RelativeLayout>
-            <TextView
-                android:layout_width="10dp"
-                android:layout_height="fill_parent"
-                style="@style/diary_addfragment_text"
-                android:gravity="center_vertical"
-                android:text=">"/>
+            <LinearLayout
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="24dp"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:background="@color/colorWhite"
+                android:orientation="horizontal">
+                    <ImageView
+                        android:gravity="center"
+                        android:layout_marginTop="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:background="#00000000"
+                        android:clickable="false"
+                        android:src="@mipmap/arrayright_normal" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
@@ -175,6 +192,7 @@
             android:text="@string/actiontype"/>
 
         <LinearLayout
+            android:layout_marginRight ="24dp"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="right|center_vertical"
@@ -184,9 +202,19 @@
                 android:id="@+id/action_spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:choiceMode="singleChoice"
-                android:gravity="center_vertical" />
+                android:background="@color/colorWhite"
+                android:gravity="center" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:adjustViewBounds="true"
+                android:background="#00000000"
+                android:clickable="false"
+                android:gravity="center"
+                android:src="@mipmap/arrayright_normal" />
         </LinearLayout>
+
     </LinearLayout>
     <LinearLayout
         android:layout_height="150dp"
@@ -210,34 +238,32 @@
         android:layout_weight="1"
         android:layout_height="1dp"
         android:layout_marginTop="13dp"
-        android:layout_marginLeft="29dp"
         android:gravity="left"
         android:orientation="vertical">
             <ImageView
+                android:layout_marginLeft="29dp"
                 android:id="@+id/picture_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:background="#00000000"
-                android:minHeight="32dp"
-                android:minWidth="24dp"
-                android:maxHeight="32dp"
-                android:maxWidth="24dp"
                 android:src="@mipmap/camera_normal"/>
     </LinearLayout>
     <LinearLayout
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="36dp"
-        android:layout_marginRight="130dp"
-        android:layout_marginLeft="130dp"
         android:layout_marginBottom="67dp"
         android:gravity="center"
         android:orientation="horizontal">
         <Button
+            android:gravity="center"
             android:id="@+id/entry_button"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/diary_addfragment_text"
+            android:textColor="#FFFFFF"
             android:background="@drawable/button_shape" 
             android:text="@string/save"/>
     </LinearLayout>
