antiwey@gmail.com:20190919 1. Fix bug PB272-宠物编辑-更改宠物名称无效    [问题原因]UPDAE 宠物资料时，判断条件是宠物名称，导致当宠物名称更改时无法在数据库中找到该条记录，从而导致UPDATE失败    [解决方案]将判断条件改为id 2. 去掉代码中冗余的toast语句 3. 补充提交上一次提交（SHA-1: 395920bc3a162aaaa15fe68ccce06c3c0347f611）漏掉的xml文件

--- a/project/app/src/main/res/layout/list_pet.xml
+++ b/project/app/src/main/res/layout/list_pet.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="98dp"
     android:descendantFocusability="blocksDescendants"
     android:background="@mipmap/listpetbackground">
     <LinearLayout
@@ -17,7 +17,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:id="@+id/info_name"
                 android:text="猫猫1"
                 android:textSize="17dp"
@@ -26,7 +25,7 @@
                 android:id="@+id/profile_editbtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_centerVertical="true"
                 android:layout_marginLeft="7dp"
                 android:clickable="true"
                 android:background="@color/colorWhite"
@@ -58,8 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/info_weight"
-                android:text=" Kg"
-                android:layout_marginBottom="10dp"/>
+                android:text=" Kg"/>
         </RelativeLayout>
     </LinearLayout>
     <LinearLayout
