--- a/project/app/src/main/res/layout/petbus_profile.xml
+++ b/project/app/src/main/res/layout/petbus_profile.xml
@@ -12,9 +12,7 @@
         android:layout_height="53dp"
         android:background="@color/colorWhite"
         android:gravity="center"
-        android:id="@+id/topbar_lineralayout"
-        android:layout_marginBottom="4dp"
-        android:orientation="horizontal">
+        android:layout_marginBottom="4dp">
         <TextView
             android:id="@+id/txt_profileTitle"
             android:layout_width="match_parent"
