--- a/project/app/src/main/res/layout/petbus_profileadd.xml
+++ b/project/app/src/main/res/layout/petbus_profileadd.xml
@@ -13,17 +13,7 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="53dp"
-        android:background="@color/colorWhite"
-         android:id="@+id/topbar_lineralayout">
-
-        <ImageButton
-            android:id="@+id/btn_profileaddBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="19dp"
-            android:background="@color/colorWhite"
-            android:src="@mipmap/arrarryleft_normal" />
+        android:background="@color/colorWhite">
         <TextView
             android:id="@+id/txt_profileaddTitle"
             android:layout_width="match_parent"
@@ -33,6 +23,14 @@
             android:text="@string/addpet"
             android:textSize="21sp"
             android:textColor="@color/colorBlack" />
+        <ImageButton
+            android:id="@+id/btn_profileaddBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="19dp"
+            android:background="@color/colorWhite"
+            android:src="@mipmap/arrarryleft_normal" />
     </RelativeLayout>
     <fragment
         android:layout_width="match_parent"
