--- a/project/app/src/main/res/values/colors.xml
+++ b/project/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="color_f2f2f2">#c2a2b2</color>
     <color name="color_ff4631">#ff4631</color>
     <color name="color_999999">#999999</color>
+    <color name="color_btn">#B1D65B</color>
 </resources>
