--- a/project/app/src/main/res/layout/actionfragment_overview.xml
+++ b/project/app/src/main/res/layout/actionfragment_overview.xml
@@ -2,38 +2,224 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/app_background"
     android:orientation="vertical">
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:orientation="horizontal"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content">
-        <View
-            android:layout_width="wrap_content"
-            android:layout_weight="1"
-            android:layout_height="1dp"
-            android:background="#aa000000" />
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:choiceMode="singleChoice"/>
-        <View
-            android:layout_width="wrap_content"
-            android:layout_weight="1"
-            android:layout_height="1dp"
-            android:background="#aa000000" />
-    </LinearLayout>
-    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <com.petbus.tj.petbus.ui.LineGraphicView
-            android:id="@+id/tabview_id"
+        android:layout_height="308dp"
+        android:layout_marginTop="17dp"
+        android:background="@color/colorWhite"
+        android:orientation="vertical">
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_marginTop="14dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/overview_img"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:clickable="false"
+                    android:gravity="center"
+                    android:src="@mipmap/overview_spinner" />
+
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:background="@color/colorWhite"
+                    android:gravity="center" />
+            </LinearLayout>
+        </LinearLayout>
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+                <ScrollView
+                    android:layout_marginLeft="19dp"
+                    android:layout_marginRight="19dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <com.petbus.tj.petbus.ui.LineGraphicView
+                        android:id="@+id/tabview_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="12dp" />
+                </ScrollView>
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="17dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="24dp"
+                        android:text="40"
+                        android:textSize="12sp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:gravity="center"
+                        android:layout_marginLeft="19dp"
+                        android:layout_marginRight="19dp"
+                        android:background="@drawable/dash_line"
+                        android:layout_marginTop="1dp" />
+                </LinearLayout>
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="57dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="24dp"
+                        android:text="30"
+                        android:textSize="12sp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:gravity="center"
+                        android:layout_marginLeft="19dp"
+                        android:layout_marginRight="19dp"
+                        android:background="@drawable/dash_line"
+                        android:layout_marginTop="1dp" />
+                </LinearLayout>
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="97dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="24dp"
+                        android:text="20"
+                        android:textSize="12sp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:layout_marginLeft="19dp"
+                        android:layout_marginRight="19dp"
+                        android:background="@drawable/dash_line"
+                        android:gravity="center"
+                        android:layout_marginTop="1dp" />
+                </LinearLayout>
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="137dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="24dp"
+                        android:text="10"
+                        android:textSize="12sp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:gravity="center"
+                        android:layout_marginLeft="19dp"
+                        android:layout_marginRight="19dp"
+                        android:background="@drawable/dash_line"
+                        android:layout_marginTop="1dp" />
+                </LinearLayout>
+
+
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="177dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="24dp"
+                        android:text="0"
+                        android:textSize="12sp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:gravity="center"
+                        android:layout_marginLeft="19dp"
+                        android:layout_marginRight="19dp"
+                        android:background="@drawable/dash_line"
+                        android:layout_marginTop="1dp" />
+                </LinearLayout>
+        </RelativeLayout>
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="100dp"
-            android:textSize="12dp" />
-    </ScrollView>
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
+            <View
+                android:layout_width="17dp"
+                android:layout_height="12dp"
+                android:clickable="false"
+                android:gravity="center"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="6dp"
+                android:background="@color/overview_feed" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:text="@string/feed"
+                android:textSize="16sp"/>
+            <View
+                android:layout_width="17dp"
+                android:layout_height="12dp"
+                android:clickable="false"
+                android:gravity="center"
+                android:layout_marginLeft="28dp"
+                android:layout_marginTop="6dp"
+                android:background="@color/overview_bath" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:text="@string/bath"
+                android:textSize="16sp"/>
+            <View
+                android:layout_width="17dp"
+                android:layout_height="12dp"
+                android:clickable="false"
+                android:gravity="center"
+                android:layout_marginLeft="28dp"
+                android:layout_marginTop="6dp"
+                android:background="@color/overview_shovelshit" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:text="@string/shovelshit"
+                android:textSize="16sp"/>
+            <View
+                android:layout_width="17dp"
+                android:layout_height="12dp"
+                android:clickable="false"
+                android:gravity="center"
+                android:layout_marginLeft="28dp"
+                android:layout_marginTop="6dp"
+                android:background="@color/overview_walk" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:text="@string/walk"
+                android:textSize="16sp"/>
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
