--- a/project/app/src/main/res/layout/petbus_profile.xml
+++ b/project/app/src/main/res/layout/petbus_profile.xml
@@ -65,6 +65,7 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:maxLength="9"
                 android:layout_toRightOf="@id/id_name"
                 android:maxLines="1"
                 android:textSize="16sp" />
