--- a/project/app/src/main/res/layout/petbus_action.xml
+++ b/project/app/src/main/res/layout/petbus_action.xml
@@ -27,26 +27,18 @@
             android:text="@string/petdiary" />
         <ImageButton
             android:id="@+id/leftreturn_button"
-            android:layout_width="14dp"
-            android:layout_height="16dp"
-            android:layout_marginLeft="19dp"
-            android:layout_marginTop="19dp"
-            android:background="#00000000"
+            android:layout_width="50dp"
+            android:layout_height="fill_parent"
             android:clickable="false"
             android:layout_alignParentLeft ="true"
+            android:background="@drawable/button_sector"
             android:src="@mipmap/back_btn" />
         <ImageButton
             android:id="@+id/setting_button"
-            android:layout_width="14dp"
-            android:layout_height="16dp"
-            android:layout_marginRight="19dp"
-            android:layout_marginTop="19dp"
-            android:background="#00000000"
+            android:layout_width="50dp"
+            android:layout_height="fill_parent"
+            android:background="@drawable/button_sector"
             android:clickable="false"
-            android:maxHeight="16dp"
-            android:maxWidth="14dp"
-            android:minHeight="16dp"
-            android:minWidth="14dp"
             android:layout_alignParentRight="true"
             android:src="@mipmap/bell" />
 
@@ -62,12 +54,10 @@
             android:src="@mipmap/add_btn" />
         <ImageButton
             android:id="@+id/overview_button"
-            android:layout_width="14dp"
-            android:layout_height="16dp"
-            android:layout_marginTop="21dp"
-            android:layout_marginRight="19dp"
-            android:background="#00000000"
-            android:clickable="false"
+            android:layout_width="50dp"
+            android:layout_height="fill_parent"
+            android:layout_marginRight="17dp"
+            android:background="@drawable/button_sector"
             android:layout_toLeftOf="@+id/setting_button"
             android:src="@mipmap/chart1" />
     </RelativeLayout>
