TerryCheng20190929:1.调整了主界面的布局. 2.修改了middle中默认的宠物ID的获取方式。

--- a/project/app/src/main/res/layout/record_date.xml
+++ b/project/app/src/main/res/layout/record_date.xml
@@ -19,8 +19,8 @@
             android:background="#00000000" />
         <View
             android:layout_width="wrap_content"
-            android:layout_height="2dp"
-            android:background="#aa808080"
+            android:layout_height="1dp"
+            android:background="#808080"
             android:gravity="center" />
         <View
             android:layout_width="match_parent"
@@ -33,11 +33,12 @@
         android:id="@+id/daily_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#aa000000"
+        android:textColor="#000000"
         android:layout_gravity="center_horizontal|center"
         android:text="record_1!"
         android:textSize="12sp" />
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_marginLeft="5dp"
         android:orientation="vertical"
         android:layout_width="33dp"
         android:layout_height="match_parent">
@@ -49,8 +50,8 @@
         <View
             android:layout_width="wrap_content"
             android:gravity="center"
-            android:layout_height="2dp"
-            android:background="#aa808080" />
+            android:layout_height="1dp"
+            android:background="#808080" />
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
