--- a/project/app/src/main/res/layout/actionfragment_actionrecord.xml
+++ b/project/app/src/main/res/layout/actionfragment_actionrecord.xml
@@ -84,13 +84,13 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="top|center"
+                android:gravity="right"
                 android:orientation="horizontal">
-
                 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="65dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="22dp"
+                    android:layout_marginRight="14dp"
                     android:gravity="top|center_horizontal"
                     android:orientation="vertical">
 
@@ -108,17 +108,18 @@
                         android:text="pet_name"
                         android:textSize="12sp" />
                 </LinearLayout>
-
                 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="28dp"
                     android:layout_height="match_parent"
                     android:gravity="right|center_vertical"
+                    android:layout_marginRight="20dp"
                     android:orientation="vertical">
                     <ImageButton
                         android:id="@+id/profile_buttom"
-                        android:layout_width="9dp"
-                        android:layout_height="17dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
                         android:clickable="false"
+                        android:background="@drawable/button_sector"
                         android:src="@mipmap/rightarrow_btn" />
                 </LinearLayout>
             </LinearLayout>
@@ -147,7 +148,7 @@
         android:layout_height="49dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="14dp"
         android:layout_marginRight="12dp"
         android:background="@mipmap/addaction_btn" />
 </RelativeLayout>
