--- a/project/app/src/main/res/layout/actionfragment_actionrecord.xml
+++ b/project/app/src/main/res/layout/actionfragment_actionrecord.xml
@@ -87,7 +87,7 @@
                 android:gravity="right"
                 android:orientation="horizontal">
                 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:layout_width="65dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginTop="22dp"
                     android:layout_marginRight="14dp"
@@ -105,7 +105,7 @@
                         android:id="@+id/pet_nickname_text"
                         android:layout_width="wrap_content"
                         android:layout_height="22dp"
-                        android:text="pet_name"
+                        android:text="一共有九个字符汉子"
                         android:textSize="12sp" />
                 </LinearLayout>
                 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
