TerryCheng20190929:1.修改了添加活动的界面。 2.增加了活动下拉框的布局

--- a/project/app/src/main/res/layout/spinner_layout.xml
+++ b/project/app/src/main/res/layout/spinner_layout.xml
@@ -4,5 +4,7 @@
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:textColor="@color/colorBlack"
-  android:textSize="16sp">   
+  android:textSize="16sp"
+  android:drawableRight="@mipmap/rightarrow_btn"
+  android:drawablePadding="30dp">   
 </TextView>
