--- a/project/app/src/main/res/layout/actionfragment_diary.xml
+++ b/project/app/src/main/res/layout/actionfragment_diary.xml
@@ -204,15 +204,6 @@
                 android:layout_height="wrap_content"
                 android:background="@color/colorWhite"
                 android:gravity="center" />
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:adjustViewBounds="true"
-                android:background="#00000000"
-                android:clickable="false"
-                android:gravity="center"
-                android:src="@mipmap/rightarrow_btn" />
         </LinearLayout>
 
     </LinearLayout>
@@ -221,8 +212,8 @@
         android:layout_width="match_parent"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:orientation="vertical">
         <EditText
             android:id="@+id/remark_text_input"
@@ -251,20 +242,17 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:layout_marginBottom="67dp"
+        android:layout_height="50dp"
         android:gravity="center"
         android:orientation="horizontal">
         <Button
             android:gravity="center"
             android:id="@+id/entry_button"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/diary_addfragment_text"
             android:textColor="#FFFFFF"
             android:background="@drawable/button_shape" 
-            android:text="@string/save"/>
+            android:text="@string/fabu"/>
     </LinearLayout>
 </LinearLayout>
