--- a/project/app/src/main/res/values/styles.xml
+++ b/project/app/src/main/res/values/styles.xml
@@ -44,7 +44,7 @@
         <item name="android:textColor">#000000</item>
     </style>
     <style name="diary_addfragment_text">
-        <item name="android:textSize">15dp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">#000000</item>
     </style>
 </resources>
